<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/about_the_app_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#311B92"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_1"
            android:text="@string/about_app_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#1A237E"
            tools:ignore="VisualLintLongText" />

        <ImageView
            android:id="@+id/img_1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/txt_3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo_txt"
            android:scaleType="centerCrop"
            android:src="@drawable/me" />

        <TextView
            android:id="@+id/txt_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_2"
            android:text="@string/about_developer_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#311B92"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_1"
            android:text="@string/about_me_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#1A237E" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_4"
            android:layout_marginTop="10dp"
            android:padding="0dp"
            android:textAllCaps="false"
            android:text="@string/linkedin_btn"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txt_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_4"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toRightOf="@id/btn_1"
            android:text="@string/or_txt"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#1A237E" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_4"
            android:layout_toRightOf="@id/txt_5"
            android:layout_marginTop="10dp"
            android:padding="0dp"
            android:textAllCaps="false"
            android:text="@string/whatsapp_btn"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>
</ScrollView>