<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advance_search_filter_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#311B92"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_1"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#1A237E"
        android:textStyle="bold"
        android:text="@string/medicine_tag_txt" />

    <Spinner
        android:id="@+id/search_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_2"
        android:layout_marginStart="10dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/apply_txt"
        android:textAllCaps="false"
        tools:ignore="TextContrastCheck" />
</RelativeLayout>