<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:id="@+id/card_item"
        app:cardBackgroundColor="#a5ffd6"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/drug_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/_60_pills_txt"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#311B92"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/drug_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/drug_number"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@id/drug_type"
                android:fontFamily="sans-serif-black"
                android:text="@string/drug_name_txt"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#1A237E" />

            <TextView
                android:id="@+id/drug_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/drug_type"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25dp"
                android:fontFamily="serif"
                android:layout_marginTop="5dp"
                android:text="@string/price__txt"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#311B92"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/drug_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo_txt"
                android:src="@drawable/medical_pill"
                tools:ignore="ImageContrastCheck" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>