<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:paddingStart="15dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="3"
            app:defaultQueryHint="Search here" />

        <ImageView
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#9EBBDEFB"
            android:contentDescription="@string/todo_txt"
            android:padding="5dp"
            android:src="@drawable/round_filter_24" />

        <TextView
            android:id="@+id/count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:text="@string/count_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#311B92"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_1"
        android:layout_marginBottom="5dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/indicator"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:padding="50dp"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/empty_cat" />

    <TextView
        android:id="@+id/indicator_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/no_medicine_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#4A4A4A"
        android:textStyle="bold"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_outline_add_24"
        app:backgroundTint="#C8E6C9"
        app:tint="#1A237E" />

</RelativeLayout>